tui/src/tui/snapshots/tryout__tui__ui__tests__a_click_on_a_php_entry_opens_its_versions_beside_it.snap
---
source: src/tui/ui.rs
assertion_line: 2175
expression: "render(&a, 100, 30).backend()"
---
" tryout  demo                                                                           3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ v13 https://v13.demo.ddev.site ────────────────────────────────╮"
"│ ● main                         ││ +                                                              │"
"│   main · 32d1f51               ││                                                                │"
"│   P╭ v13 ─────────────────────────────────────────────────────╮╭─────────────────────────╮       │"
"│ ◆ v│ PHP 8.4                        applies at once        ▸  ││   PHP 8.2               │       │"
"│   1│ Database: MariaDB 11.8         switch type or version ▸  ││   PHP 8.3               │       │"
"│   P│ Open site                      in the browser            ││ ✓ PHP 8.4  running now  │       │"
"│ ○ b│ Open backend                   /typo3/ in the browser    │╰─────────────────────────╯       │"
"│   m│ Make primary                   at the project URL        │ev.site                           │"
"│   n│ Unserve                        keeps its database        │ariaDB 11.8)                      │"
"│    │ Unserve and drop its database                            │                                  │"
"│    │──────────────────────────────────────────────────────────│worktree                          │"
"│    │ Update from its base branch                              │                                  │"
"│    │ Switch TYPO3 version…                                    │                                  │"
"│    │ Apply Gerrit patch…            browse open changes       │                                  │"
"│    │ Reset Core + rebuild                                     │                                  │"
"│    │──────────────────────────────────────────────────────────│                                  │"
"│    │ Run command…                   in its PHP and DB         │                                  │"
"│    │ Fresh install…                 wipes DB + fileadmin      │                                  │"
"│    │──────────────────────────────────────────────────────────│                                  │"
"│    │ Rename…                        branch untouched          │                                  │"
"│    │ Remove…                        deletes the checkout      │                                  │"
"│    │──────────────────────────────────────────────────────────│                                  │"
"│    │ Status                         project overview          │                                  │"
"│    │ Regenerate the overlay         composer.tryout.json      │                                  │"
"│    ╰──────────────────────────────────────────────────────────╯                                  │"
"│                                ││                                                                │"
"╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯"
" ↑↓ select   ⏎ run   esc cancel                                                                     "
