tui/src/tui/snapshots/tryout__tui__ui__tests__a_password_popup_masks_what_is_typed.snap
---
source: src/tui/ui.rs
expression: "render(&a, 90, 24).backend()"
---
" tryout  demo                                                                 3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ main https://demo.ddev.site ─────────────────────────╮"
"│ ● main                         ││ +                                                    │"
"│   main · PHP 8.4 · 32d1f51     ││                                                      │"
"│ ◆ v13                         ±││  where    main                                       │"
"│   13.4 #91234 +1 · PHP 8.4     ││  head     32d1f51 [TASK] Raise phpstan to 2.1.17     │"
"│ ○ bugfix                       ││  changes  clean                                      │"
"│   main · 32d1f51               ││  dir      project root                               │"
"│              ╭ Password needed ─────────────────────────────────────────╮              │"
"│              │ Serve v13 asks:                                          │              │"
"│              │ Password:                                                │              │"
"│              │                                                          │              │"
"│              │   •••••••▏                                               │              │"
"│              │                                                          │              │"
"│              │ Sent to that command only — never stored or logged.      │              │"
"│              ╰──────────────────────────────────────────────────────────╯              │"
"│                                ││                                                      │"
"│                                ││                                                      │"
"│                                ││                                                      │"
"│                                ││                                                      │"
"│                                ││                                                      │"
"│                                ││                                                      │"
"╰────────────────────────────────╯╰──────────────────────────────────────────────────────╯"
" ⏎ send   esc cancel the command                                                          "
