tui/src/tui/snapshots/tryout__tui__ui__tests__a_right_click_menu_opens_at_the_pointer_and_stays_on_screen.snap
---
source: src/tui/ui.rs
assertion_line: 2129
expression: "render(&a, 80, 24).backend()"
---
" tryout  demo                                                       3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ v13 https://v13.demo.ddev.site ────────────╮"
"│ ● main                         ││ +                                          │"
"│   main · 32d1f51               ││                                            │"
"│   PHP 8.4 · MariaDB            ││  where    detached from 13.4               │"
"│ ◆ v13             ╭ v13 ─────────────────────────────────────────────────────╮"
"│   13.4 #91234 +1 ·│ Database: MariaDB              switch the type        ▸  │"
"│   PHP 8.4 · MariaD│ Open site                      in the browser            │"
"│ ○ bugfix          │ Open backend                   /typo3/ in the browser    │"
"│   main · 32d1f51  │ Make primary                   at the project URL        │"
"│   not served      │ Unserve                        keeps its database        │"
"│                   │ Unserve and drop its database                            │"
"│                   │──────────────────────────────────────────────────────────│"
"│                   │ Update from its base branch                              │"
"│                   │ Switch TYPO3 version…                                    │"
"│                   │ Apply Gerrit patch…            browse open changes       │"
"│                   │ Reset Core + rebuild                                     │"
"│                   │──────────────────────────────────────────────────────────│"
"│                   │ Run command…                   in its PHP and DB         │"
"│                   │ Fresh install…                 wipes DB + fileadmin      │"
"│                   │──────────────────────────────────────────────────────────│"
"│                   │ Rename…                        branch untouched          │"
"╰───────────────────│ Remove…                        deletes the checkout      │"
" ↑↓ select   ⏎ run  ╰──────────────────────────────────────────────────────────╯"
