tui/src/tui/snapshots/tryout__tui__ui__tests__a_whole_page_of_changes_fits_and_the_page_bar_is_clickable.snap
---
source: src/tui/ui.rs
assertion_line: 1786
expression: t.backend()
---
" tryout  demo                                                                                               3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ main https://demo.ddev.site ───────────────────────────────────────────────────────╮"
"│ ● main                         ││ +                                                                                  │"
"│   m╭ Apply Gerrit changes to v13 ───────────────────────────────────────────────────────────────────────────────╮    │"
"│   P│ Open changes on its branch                                                                                 │    │"
"│ ◆ v│   search ▏                                                                                                 │    │"
"│   1│   [ ] 91000  CR+1  V ·    [TASK] Change number 0                                   Ada                     │    │"
"│   P│   [ ] 91001  CR ·  V ·    [TASK] Change number 1                                   Ada                     │    │"
"│ ○ b│   [ ] 91002  CR+1  V ·    [TASK] Change number 2                                   Ada                     │    │"
"│   m│   [ ] 91003  CR ·  V ·    [TASK] Change number 3                                   Ada                     │    │"
"│   n│   [ ] 91004  CR+1  V ·    [TASK] Change number 4                                   Ada                     │    │"
"│    │   [ ] 91005  CR ·  V ·    [TASK] Change number 5                                   Ada                     │    │"
"│    │   [ ] 91006  CR+1  V ·    [TASK] Change number 6                                   Ada                     │    │"
"│    │   [ ] 91007  CR ·  V ·    [TASK] Change number 7                                   Ada                     │    │"
"│    │   [ ] 91008  CR+1  V ·    [TASK] Change number 8                                   Ada                     │    │"
"│    │   [ ] 91009  CR ·  V ·    [TASK] Change number 9                                   Ada                     │    │"
"│    │   [ ] 91010  CR+1  V ·    [TASK] Change number 10                                  Ada                     │    │"
"│    │   [ ] 91011  CR ·  V ·    [TASK] Change number 11                                  Ada                     │    │"
"│    │   [ ] 91012  CR+1  V ·    [TASK] Change number 12                                  Ada                     │    │"
"│    │   [ ] 91013  CR ·  V ·    [TASK] Change number 13                                  Ada                     │    │"
"│    │   [ ] 91014  CR+1  V ·    [TASK] Change number 14                                  Ada                     │    │"
"│    │   [ ] 91015  CR ·  V ·    [TASK] Change number 15                                  Ada                     │    │"
"│    │   [ ] 91016  CR+1  V ·    [TASK] Change number 16                                  Ada                     │    │"
"│    │   [ ] 91017  CR ·  V ·    [TASK] Change number 17                                  Ada                     │    │"
"│    │   [ ] 91018  CR+1  V ·    [TASK] Change number 18                                  Ada                     │    │"
"│    │   [ ] 91019  CR ·  V ·    [TASK] Change number 19                                  Ada                     │    │"
"│    │   [ ] 91020  CR+1  V ·    [TASK] Change number 20                                  Ada                     │    │"
"│    │   [ ] 91021  CR ·  V ·    [TASK] Change number 21                                  Ada                     │    │"
"│    │   [ ] 91022  CR+1  V ·    [TASK] Change number 22                                  Ada                     │    │"
"│    │   [ ] 91023  CR ·  V ·    [TASK] Change number 23                                  Ada                     │    │"
"│    │   [ ] 91024  CR+1  V ·    [TASK] Change number 24                                  Ada                     │    │"
"│    │   ‹ previous   page 2 · 26–50   next ›                                                                     │    │"
"│    │                                                                                                            │    │"
"│    ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯    │"
"│                                ││                                                                                    │"
"│                                ││                                                                                    │"
"│                                ││                                                                                    │"
"│                                ││                                                                                    │"
"╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯"
" type search Gerrit   ↓ tab to the list   PgUp PgDn pages   ⏎ apply   esc cancel                                        "
