tui/src/tui/snapshots/tryout__tui__ui__tests__a_worktree_with_tabs_shows_its_tab_bar.snap
---
source: src/tui/ui.rs
assertion_line: 2321
expression: "render(&a, 80, 12).backend()"
---
" tryout  demo                                                       3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ main https://demo.ddev.site ───────────────╮"
"│ ● main                       ▶2││ 1 shell   2 shell   +                      │"
"│   main · 32d1f51               ││█                                           │"
"│   PHP 8.4 · MariaDB            ││                                            │"
"│ ◆ v13                         ±││                                            │"
"│   13.4 #91234 +1 · 32d1f51     ││                                            │"
"│   PHP 8.4 · MariaDB            ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"╰────────────────────────────────╯╰────────────────────────────────────────────╯"
" ^G back to the list   every other key goes to the shell                        "
