tui/src/tui/snapshots/tryout__tui__ui__tests__failed.snap
---
source: src/tui/ui.rs
expression: "render(&a, 60, 12).backend()"
---
" tryout  demo                                               "
"╭ Worktrees ──── + new ╮╭──────────────────────────────────╮"
"│ Could not list       ││                                  │"
"│ worktrees            ││                                  │"
"│                      ││                                  │"
"│ ddev tryout worktree ││                                  │"
"│ list failed: project ││                                  │"
"│ not running          ││                                  │"
"│                      ││                                  │"
"│ r  retry             ││                                  │"
"╰──────────────────────╯╰──────────────────────────────────╯"
" ↑↓ select   ⏎ shell   t new tab   n next agent   a actions "
