tui/src/tui/snapshots/tryout__tui__ui__tests__layout_at_80x24.snap
---
source: src/tui/ui.rs
expression: "render(&loaded(), 80, 24).backend()"
---
" tryout  demo                                                       3 worktrees "
"╭ Worktrees ────────────── + new ╮╭ main https://demo.ddev.site ───────────────╮"
"│ ● main                         ││ +                                          │"
"│   main · PHP 8.4 · 32d1f51     ││                                            │"
"│ ◆ v13                         ±││  where    main                             │"
"│   13.4 #91234 +1 · PHP 8.4     ││  head     32d1f51 [TASK] Raise phpstan t…  │"
"│ ○ bugfix                       ││  changes  clean                            │"
"│   main · 32d1f51               ││  dir      project root                     │"
"│                                ││  site     https://demo.ddev.site           │"
"│                                ││  runtime  PHP 8.4 · db_main                │"
"│                                ││                                            │"
"│                                ││  Enter  open a shell in this worktree      │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"╰────────────────────────────────╯╰────────────────────────────────────────────╯"
" ↑↓ select   ⏎ shell   t new tab   n next agent   a actions   q detach          "
