tui/src/tui/snapshots/tryout__tui__ui__tests__loading.snap
---
source: src/tui/ui.rs
expression: "render(&a, 60, 12).backend()"
---
" tryout  demo                                               "
"╭ Worktrees ──── + new ╮╭──────────────────────────────────╮"
"│ Loading worktrees…   ││                                  │"
"│                      ││                                  │"
"│                      ││                                  │"
"│                      ││                                  │"
"│                      ││                                  │"
"│                      ││                                  │"
"│                      ││                                  │"
"│                      ││                                  │"
"╰──────────────────────╯╰──────────────────────────────────╯"
" ↑↓ select   ⏎ shell   t new tab   n next agent   a actions "
